Changes to be committed:     modified:   src/css/style.css     renamed:    src/images/016.jpg -> src/images/015.jpg     modified:   src/images/15.jpg     modified:   src/images/16.jpg     modified:   src/images/27.jpg     modified:   src/images/28.jpg     modified:   src/js/data.js     modified:   src/js/script.js

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -77,6 +77,10 @@ input {
   transition-duration: 1.5s;
 }
 
+.title-div {
+  overflow: auto;
+}
+
 .title {
   text-align: center;
   font-size: 30px;
@@ -91,7 +95,8 @@ input {
 
 .text {
   text-align: justify;
-  font-size: 20px;
+  font-size: 30px;
+  text-align: center;
 }
 
 .page img {
@@ -107,6 +112,8 @@ input {
   backface-visibility: hidden;
   box-sizing: border-box;
   padding: 1rem;
+  display: grid;
+  place-items: center;
 }
 
 .back-page {
